--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<h1>{{user.name}}'s For You Page</h1>
+<h1 class="dashboard-header">{{user.name}}'s For You Page</h1>
 <div class="dashboard">
     <a href="/api/posts/new/{{user.id}}"><button type="button" id="create" class="btn btn-info btn-lg">+ Create new post</button></a>
     <div class="containter user-posts">
