--- a/views/posteditor.handlebars
+++ b/views/posteditor.handlebars
@@ -1,6 +1,6 @@
 <form class="edit-post">
   <div class="form-group">
-    <label for="title">Edit Your Post Below</label>
+    <label for="title">Edit Your Post Here</label>
     <textarea class="form-control" id="title" rows="1">{{post.title}}</textarea>
   </div>
   <div class="form-group">
