--- a/views/postcreation.handlebars
+++ b/views/postcreation.handlebars
@@ -5,7 +5,7 @@
       <input id="title" class="form-control" type="text" placeholder="Title">
     </div>
     <div class="form-group">
-      <textarea class="form-control" id="postContent" rows="10" placeholder="Create your new post below"></textarea>
+      <textarea class="form-control" id="postBody" rows="10" placeholder="Create your new post below"></textarea>
     </div>
     <div class="form-group">
     <button id="submitPost" type="submit" class="btn btn-light mb-2">Submit Post</button>
