--- a/views/posteditor.handlebars
+++ b/views/posteditor.handlebars
@@ -4,7 +4,7 @@
     <textarea class="form-control" id="title" rows="1">{{post.title}}</textarea>
   </div>
   <div class="form-group">
-    <textarea class="form-control" id="postContent" rows="3">{{post.content}}</textarea>
+    <textarea class="form-control" id="postBody" rows="3">{{post.body}}</textarea>
   </div>
   <div class="form-group">
   <button id="saveChanges" type="submit" class="btn btn-info mb-2">Save Changes</button>
