fixing small things

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <h1 class="dashboard-header">{{user.name}}'s For You Page</h1>
 <div class="dashboard">
-    <a href="/api/posts/new/{{user.id}}"><button type="button" id="create" class="btn btn-info btn-lg">+ Create new post</button></a>
+    <a href="/api/posts/new/{{user.id}}"><button type="button" id="create" class="btn btn-info btn-lg">Create new post</button></a>
     <div class="containter user-posts">
         <h3>Your Posts</h3>
         {{#each user.posts as |post|}}
@@ -8,5 +8,3 @@
         {{/each}}
     </div>
 </div>
-
-<script src="/js/deletepost.js"></script>
