--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,46 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Tech Blog</title>
+	<meta charset="UTF-8">
+	<title>Blog</title>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand mr-auto" href="/" id="navTitle">Blog</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="/">Home</a>
+					</li>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-success">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="/">Tech Blog</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" href="/">Home</a>
-                  {{#if logged_in}}
-                  <a class="nav-link" href="/dashboard/{{user_id}}">Dashboard</a>
-                  <a id="logout" class="nav-link" href="#">Logout</a>
-                  {{else}}
-                  <a class="nav-link" href="/login">Login</a>
-                  {{/if}}
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
+					{{#if logged_in}}
 
-    <main>
-        {{{body}}}
-    </main>
+					<li class="nav-item">
+						<a class="nav-link" href="/loginpage" id="logout">Logout</a>
+					</li>
+
+					{{else}}   
+
+					<li class="nav-item">
+        				<a class="nav-link" href="/loginpage">Login</a>
+    				</li>
+            
+					{{/if}}
+
+					<li class="nav-item">
+						<a class="nav-link" href="/postcreation" tabindex="-1" aria-disabled="true">Dashboard</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<div class="flex-column justify-space-around">
+		<main class="container container-fluid mt-5">
+
+			{{{ body }}}
+
+		</main>
+	</div>
+
+
+
+	{{#if logged_in}}
+	<script src="/js/logout.js"></script>
+  <script src="/js/comment.js"></script>
+	{{/if}}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    {{#if logged_in}}
-    <script src="/js/logout.js"></script>
-    {{/if}}
 </body>
 
 </html>
