--- a/views/postcreation.handlebars
+++ b/views/postcreation.handlebars
@@ -1,16 +1,27 @@
-<div class="create-post-container">
-  <h3 class="new-post">Create your new post below</h3>
-  <form class="create-post">
-    <div class="form-group">
-      <input id="title" class="form-control" type="text" placeholder="Title">
-    </div>
-    <div class="form-group">
-      <textarea class="form-control" id="postBody" rows="10" placeholder="Create your new post below"></textarea>
-    </div>
-    <div class="form-group">
-    <button id="submitPost" type="submit" class="btn btn-light mb-2">Submit Post</button>
-    </div>
-  </form>
+<div class="new-post-form">
+	<div class="container">
+		<div class="row">
+
+			<h1>
+				CREATE POST <span id="createHead">as user: {{username}}, id: {{id}}</span>
+			</h1>
+
+			<form class="new-post-form">
+				<div class="mb-3">
+					<label for="post_title" class="form-label">Post Title</label>
+					<input type="text" class="form-control" id="post_title" placeholder="title . . .">
+				</div>
+				<div class="mb-3">
+					<label for="content" class="form-label">Post Content</label>
+					<textarea class="form-control" id="content" placeholder="content . . ." rows="10"></textarea>
+				</div>
+				<button type="submit" value="Submit">
+					Submit
+				</button>
+			</form>
+
+		</div>
+	</div>
 </div>
 
-<script src="/js/createpost.js"></script>
+<script src="/js/createPost.js"></script>
