--- a/views/posteditor.handlebars
+++ b/views/posteditor.handlebars
@@ -1,14 +1,32 @@
-<form class="edit-post">
-  <div class="form-group">
-    <label for="title">Edit Your Post Here</label>
-    <textarea class="form-control" id="title" rows="1">{{post.title}}</textarea>
-  </div>
-  <div class="form-group">
-    <textarea class="form-control" id="postBody" rows="3">{{post.body}}</textarea>
-  </div>
-  <div class="form-group">
-  <button id="saveChanges" type="submit" class="btn btn-info mb-2">Save Changes</button>
-  </div>
-</form>
+<div class="update-form">
+	<div class="container">
+		<div class="row">
 
-<script src="/js/editpost.js"></script>
+			<h1>
+				edit POST {{username}}, id: <span id="pUpId">{{ id }}</span>
+				<span id="bpId">{{ id }}</span>
+			</h1>
+
+			<form class="update-form">
+        
+				<div class="mb-3">
+					<label for="post_title" class="form-label">Post Title</label>
+					<textarea type="text" class="form-control" id="post_title" placeholder="{{ post_title }}" rows="1">{{ post_title }}</textarea>
+				</div>
+
+				<div class="mb-3">
+					<label for="content" class="form-label">Post Content</label>
+					<textarea class="form-control" id="content" placeholder="{{ content }}" rows="10">{{ content }}</textarea>
+				</div>
+
+				<button type="submit" value="Submit" id="submitEdit">
+					Submit Update
+				</button>
+
+			</form>
+
+		</div>
+	</div>
+</div>
+
+<script src="/js/editPost.js"></script>
