--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,7 +11,7 @@
 			<a href="/opinions/{{id}}" class="btn btn-secondary btn-sm">continue reading . . .</a>
 		</div>
 		<div class="card-header">
-    		by: {{ opinions.user.username }}
+    		by: {{ opinions.user.name }}
   		</div>
 	</div>
     {{/each}}
