--- a/views/posteditor.handlebars
+++ b/views/posteditor.handlebars
@@ -3,7 +3,7 @@
 		<div class="row">
 
 			<h1>
-				edit POST {{username}}, id: <span id="pUpId">{{ id }}</span>
+				edit POST {{name}}, id: <span id="pUpId">{{ id }}</span>
 				<span id="bpId">{{ id }}</span>
 			</h1>
 
