--- a/views/postcreation.handlebars
+++ b/views/postcreation.handlebars
@@ -3,7 +3,7 @@
 		<div class="row">
 
 			<h1>
-				CREATE POST <span id="createHead">as user: {{username}}, id: {{id}}</span>
+				CREATE POST <span id="createHead">as user: {{name}}, id: {{id}}</span>
 			</h1>
 
 			<form class="new-post-form">
