--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,15 +3,15 @@
         <h2>Dashboard</h2>
     </div>
 
-    {{#each opinions as |opinions|}}
+    {{#each posts as |post|}}
 	<div class="card" id="postDataMain">
 		<div class="card-body">
-			<h2 class="card-title"><a href="/opinions/{{id}}">{{ opinions.post_title }}</a></h2>
-			<p class="card-text">{{opinions.content}}</p>
-			<a href="/opinions/{{id}}" class="btn btn-secondary btn-sm">continue reading . . .</a>
+			<h2 class="card-title"><a href="/post/{{id}}">{{ post.post_title }}</a></h2>
+			<p class="card-text">{{post.content}}</p>
+			<a href="/post/{{id}}" class="btn btn-secondary btn-sm">continue reading . . .</a>
 		</div>
 		<div class="card-header">
-    		by: {{ opinions.user.name }}
+    		by: {{ post.name }}
   		</div>
 	</div>
     {{/each}}
