--- a/views/postcreation.handlebars
+++ b/views/postcreation.handlebars
@@ -24,4 +24,26 @@
 	</div>
 </div>
 
+{{#if posts.length}}
+	<div class="container">
+	  	<div class="row align-items-center">
+			<h2>your previous posts:</h2>
+
+			<div class="col-md-6 blogpost-list">
+    			{{#each posts as |post|}}
+				<div class="card" style="width: 25rem;">
+					<div class="card-body">
+						<h5 class="card-title">{{post.post_title}}</h5>
+						<a href="/posteditor/{{post.id}}" class="card-link">view</a>
+						<a href="/postcreation/{{post.id}}" class="card-link">edit</a>
+					</div>
+				</div>
+    			{{/each}}
+  			</div>
+
+		</div>
+	</div>
+
+{{/if}}
+
 <script src="/js/createPost.js"></script>
