--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 	<meta charset="UTF-8">
 	<title>Blog</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="public/css/style.css">
 </head>
 
@@ -22,13 +22,13 @@
 					{{#if logged_in}}
 
 					<li class="nav-item">
-						<a class="nav-link" href="/loginpage" id="logout">Logout</a>
+						<a class="nav-link" href="/login" id="logout">Logout</a>
 					</li>
 
 					{{else}}   
 
 					<li class="nav-item">
-        				<a class="nav-link" href="/loginpage">Login</a>
+        				<a class="nav-link" href="/login">Login</a>
     				</li>
             
 					{{/if}}
