--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,7 +6,7 @@
     {{#each posts as |post|}}
 	<div class="card" id="postDataMain">
 		<div class="card-body">
-			<h2 class="card-title"><a href="/post/{{id}}">{{ post.post_title }}</a></h2>
+			<h2 class="card-title"><a href="/post/{{id}}">{{ post.title }}</a></h2>
 			<p class="card-text">{{post.content}}</p>
 			<a href="/post/{{id}}" class="btn btn-secondary btn-sm">continue reading . . .</a>
 		</div>
