--- a/views/posteditor.handlebars
+++ b/views/posteditor.handlebars
@@ -9,8 +9,8 @@
 			<form class="update-form">
         
 				<div class="mb-3">
-					<label for="post_title" class="form-label">Post Title</label>
-					<textarea type="text" class="form-control" id="post_title" placeholder="{{ post_title }}" rows="1">{{ post_title }}</textarea>
+					<label for="title" class="form-label">Post Title</label>
+					<textarea type="text" class="form-control" id="title" placeholder="{{ title }}" rows="1">{{ title }}</textarea>
 				</div>
 
 				<div class="mb-3">
