--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,6 @@
 <div class="card">
 	<div class="card-body">
-		<h1 class="card-title">{{ post_title }}</h1>
+		<h1 class="card-title">{{ title }}</h1>
 		<p class="card-text">{{ content }}</p>
 	</div>
 	<div class="card-header">
@@ -10,7 +10,7 @@
 
 <div class="container" id="commentContainer">
 	<div class="row align-items-center">
-		<h2 id="commentForm">comment form</h2>
+		<h2 id="commentForm">Comments:</h2>
 
 		{{#if logged_in}}
 			<div class="card">
