--- a/views/postcreation.handlebars
+++ b/views/postcreation.handlebars
@@ -8,8 +8,8 @@
 
 			<form class="new-post-form">
 				<div class="mb-3">
-					<label for="post_title" class="form-label">Post Title</label>
-					<input type="text" class="form-control" id="post_title" placeholder="title . . .">
+					<label for="title" class="form-label">Post Title</label>
+					<input type="text" class="form-control" id="title" placeholder="title . . .">
 				</div>
 				<div class="mb-3">
 					<label for="content" class="form-label">Post Content</label>
@@ -33,7 +33,7 @@
     			{{#each posts as |post|}}
 				<div class="card" style="width: 25rem;">
 					<div class="card-body">
-						<h5 class="card-title">{{post.post_title}}</h5>
+						<h5 class="card-title">{{post.title}}</h5>
 						<a href="/posteditor/{{post.id}}" class="card-link">view</a>
 						<a href="/postcreation/{{post.id}}" class="card-link">edit</a>
 					</div>
