--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -50,7 +50,7 @@
 					<div class="row g-0 justify-content-start">
 						<div class="col-md-8">
 							<div class="commentHead card-body">
-								<h4 class="card-title">{{ comment.user.name }}</h4>
+								<h4 class="card-title">{{ user.name }}</h4>
 								<p class="card-text" id="commentContent">{{ comment.content }}</p>
 							</div>
 						</div>
