--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,11 +7,11 @@
 	<div class="card" id="postDataMain">
 		<div class="card-body">
 			<h2 class="card-title"><a href="/post/{{id}}">{{ post.title }}</a></h2>
-			<p class="card-text">{{post.content}}</p>
+			<p class="card-text">{{post.body}}</p>
 			<a href="/post/{{id}}" class="btn btn-secondary btn-sm">continue reading . . .</a>
 		</div>
 		<div class="card-header">
-    		by: {{ post.name }}
+    		by: {{ user.name }}
   		</div>
 	</div>
     {{/each}}
