--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,14 @@
-<div class="row justify-space-between-md">
-
+<div class="col-md-8 offset-md-2">
+<h2>Please login or create an account to view and create posts.</h2>
+<div class="col-md-6 offset-md-4">
     <div class="login-card">
         <h2 class="page-title">Login</h2>
         <form class="form login-form">
-            <div class="form-group">
+            <div class="form-group col-6 col-sm-3">
                 <label for="email-login">Email:</label>
                 <input class="form-input" type="text" id="email-login" />
             </div>
-            <div class="form-group">
+            <div class="form-group col-6 col-sm-3">
                 <label for="password-login">Password:</label>
                 <input class="form-input" type="password" id="password-login" />
             </div>
@@ -20,15 +21,15 @@
     <div class="login-card">
         <h2 class="page-title">Signup</h2>
         <form class="form signup-form">
-            <div class="form-group">
+            <div class="form-group col-6 col-sm-3">
                 <label for="name-signup">Name:</label>
                 <input class="form-input" type="text" id="name-signup" />
             </div>
-            <div class="form-group">
+            <div class="form-group col-6 col-sm-3">
                 <label for="email-signup">Email:</label>
                 <input class="form-input" type="text" id="email-signup" />
             </div>
-            <div class="form-group">
+            <div class="form-group col-6 col-sm-3">
                 <label for="password-signup">Password:</label>
                 <input class="form-input" type="password" id="password-signup" />
             </div>
@@ -39,6 +40,6 @@
     </div>
 	
 </div>
-
+</div>
 
 <script src="./js/login.js"></script>
