--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -41,12 +41,12 @@
 </div>
 
 {{!-- COMMENTS --}}
-{{#if comments.length}}
+{{!-- {{ comment.length}} --}}
   <div class="container" id="recentCommentContainer">
 	  	<div class="row align-items-center">
 			<h2>recent comments</h2>
 
-			{{#each comments as |comment|}}
+			{{#each comment}}
 				<div class="card mb-3" style="max-width: 550px"; id="commentCard">
 					<div class="row g-0 justify-content-start">
 						<div class="col-md-8">
@@ -61,4 +61,4 @@
 		
 		</div>
   </div>
-{{/if}}
+{{!-- {{/if}} --}}
