--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,5 @@
 <div class="card">
+	{{log postData}}
 	<div class="card-body">
 		<h1 class="card-title">{{ title }}</h1>
 		<p class="card-text">{{ body }}</p>
@@ -46,13 +47,14 @@
 	  	<div class="row align-items-center">
 			<h2>recent comments</h2>
 
-			{{#each comment}}
+			{{#each Comment}}
+			{{log Comment}}
 				<div class="card mb-3" style="max-width: 550px"; id="commentCard">
 					<div class="row g-0 justify-content-start">
 						<div class="col-md-8">
 							<div class="commentHead card-body">
 								<h4 class="card-title">{{ user.name }}</h4>
-								<p class="card-text" id="commentContent">{{ comment.body }}</p>
+								<p class="card-text" id="commentContent">{{ Comment.body }}</p>
 							</div>
 						</div>
 					</div>
